Add getTimeSeriesDir function in export

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(doGenerate)
 export(genStatusHTML)
 export(getErrorInfo)
 export(getSTSList)
+export(getTimeSeriesDir)
 export(loadSTS)
 export(loadTimeSeriesStatus)
 export(processLenGrpHeader)
