Add preprocess function for client

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,11 +7,13 @@ export(getSTSList)
 export(getTimeSeriesDir)
 export(loadSTS)
 export(loadTimeSeriesStatus)
+export(preprocess)
 export(processLenGrpHeader)
 export(stsPlot)
 export(stsTable)
 export(updateICESSurveyFile)
 importFrom(Rstox,getNMDinfo)
+importFrom(config,get)
 importFrom(data.table,data.table)
 importFrom(data.table,key)
 importFrom(data.table,set)
