--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,16 +10,36 @@ export(loadSTS)
 export(loadTimeSeriesStatus)
 export(preprocess)
 export(processLenGrpHeader)
+export(processRstoxSTS)
 export(stsPlot)
 export(stsTable)
 export(updateICESSurveyFile)
+import(Rstox)
+import(desc)
 importFrom(Rstox,getNMDinfo)
+importFrom(XML,"xmlValue<-")
+importFrom(XML,getDefaultNamespace)
+importFrom(XML,getNodeSet)
+importFrom(XML,newXMLDoc)
+importFrom(XML,saveXML)
+importFrom(XML,xmlApply)
+importFrom(XML,xmlAttrs)
+importFrom(XML,xmlName)
+importFrom(XML,xmlNamespaceDefinitions)
+importFrom(XML,xmlParse)
+importFrom(XML,xmlValue)
 importFrom(config,get)
+importFrom(data.table,CJ)
 importFrom(data.table,data.table)
+importFrom(data.table,is.data.table)
 importFrom(data.table,key)
+importFrom(data.table,rbindlist)
 importFrom(data.table,set)
 importFrom(data.table,setcolorder)
 importFrom(data.table,setkeyv)
+importFrom(data.table,tstrsplit)
+importFrom(filelock,lock)
+importFrom(filelock,unlock)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggsave)
@@ -38,6 +58,7 @@ importFrom(knitr,kable)
 importFrom(knitr,knit2html)
 importFrom(knitr,knit2pdf)
 importFrom(memisc,show_html)
+importFrom(rJava,.jgetEx)
 importFrom(scales,log2_trans)
 importFrom(scales,math_format)
 importFrom(scales,trans_breaks)
@@ -47,5 +68,6 @@ importFrom(stats,na.omit)
 importFrom(stats,xtabs)
 importFrom(utils,download.file)
 importFrom(utils,head)
+importFrom(utils,packageVersion)
 importFrom(utils,tail)
 importFrom(utils,write.table)
