Fix multi-core usage

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ importFrom(knitr,kable)
 importFrom(knitr,knit2html)
 importFrom(knitr,knit2pdf)
 importFrom(memisc,show_html)
+importFrom(parallel,detectCores)
 importFrom(rJava,.jgetEx)
 importFrom(scales,log2_trans)
 importFrom(scales,math_format)
