--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(httr,POST)
 importFrom(httr,content)
+importFrom(jsonlite,fromJSON)
 importFrom(knitr,kable)
 importFrom(knitr,knit2html)
 importFrom(knitr,knit2pdf)
@@ -66,8 +67,10 @@ importFrom(scales,log2_trans)
 importFrom(scales,math_format)
 importFrom(scales,trans_breaks)
 importFrom(scales,trans_format)
+importFrom(stats,cov)
 importFrom(stats,ftable)
 importFrom(stats,na.omit)
+importFrom(stats,na.pass)
 importFrom(stats,xtabs)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
