Update survey variance generator

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ importFrom(XML,xmlParse)
 importFrom(XML,xmlValue)
 importFrom(config,get)
 importFrom(data.table,CJ)
+importFrom(data.table,copy)
 importFrom(data.table,data.table)
 importFrom(data.table,is.data.table)
 importFrom(data.table,key)
